third_party/move/move-compiler/tests/move_check/parser/address_just_too_long_exp.exp
warning[W09003]: unused assignment
  ┌─ tests/move_check/parser/address_just_too_long_exp.move:4:13
  │
4 │         let x = @0x10000000000000000000000000000000000000000000000000000000000000000;
  │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')

error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_just_too_long_exp.move:4:18
  │
4 │         let x = @0x10000000000000000000000000000000000000000000000000000000000000000;
  │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes

